[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybak"
dynamic = ["version"]
description = "Semi-automated backups with Restic"
readme = "README.md"
requires-python = ">=3.11.2"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = { attr = "pybak.__version__" }